--- a/src/styles/Warehouses.scss
+++ b/src/styles/Warehouses.scss
@@ -96,7 +96,7 @@
   }
 
   &--active {
-    background-color: $dark-grey-color;
+    background-color: $red-color;
     color: $main-background-color;
   }
 }
