--- a/src/components/UI/ErrorMessage/ErrorMessage.scss
+++ b/src/components/UI/ErrorMessage/ErrorMessage.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/mixins.scss';
+@import '../../../styles/variables.scss';
 
 .error-message {
     display: flex;
@@ -7,15 +8,16 @@
     width: 320px;
     height: 80px;
     background-color: rgba(206, 126, 126, 0.5);
-    color: black;
-    border: 1px solid black;
+    color: $dark-grey-color;
+    border: 1px solid $dark-grey-color;
     position: relative;
-    font-size: 20px;
+    font-size: 16px;
     box-sizing: border-box;
     position: absolute;
     top: 70px;
     left: 50%;
     transform: translateX(-50%);
+
 
     @include onTablet {
         width: 500px;
